--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +31,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+table {
+  border: 2px solid forestgreen;
+  width: 800px;
+  height: 200px;
+  font-size: 15px;
+}
+
+th {
+  border-bottom: 1px solid black;
+}
+
+td {
+  text-align: center;
+}
+button{
+  margin: 20px;
 }
